# histokit

./: .gitignore  LICENCE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
notebooks/: 2026-03-20-DM-dataset.ipynb  2026-04-10-DM-render-annotations.ipynb  2026-04-10-DM-thumbnails.ipynb  2026-04-11-DM-background.ipynb  2026-04-12-DM-patchset.ipynb  2026-04-13-DM-pipeline.ipynb  2026-04-23-patchvis.ipynb
src/histokit/: __init__.py
src/histokit/cli/: example.py  export.py  helpers.py  list.py  main.py  patchmap.py  plan.py  preview.py  run.py  thumbnail.py
src/histokit/data/: dataset.py  sample.py  schema.py
src/histokit/data/annotations/: annotation.py  asapxml.py  geojson.py  registry.py
src/histokit/data/slides/: __init__.py  openslide.py  registry.py  slide.py  tiffslide.py
src/histokit/dataset/: dataset.py  sample.py  schema.py
src/histokit/io/annotations/: __init__.py  annotation.py  asapxml.py  geojson.py  registry.py
src/histokit/io/slides/: openslide.py  region.py  registry.py  slide.py  tiffslide.py
src/histokit/patchset/: context.py  manifest.py  patchset.py
src/histokit/pipelines/: __init__.py  model.py  params.py  pipeline.py  runtime.py  stage.py
src/histokit/pipelines/presets/: __init__.py  basic.py  research.py
src/histokit/pipelines/segmentation/: detectors.py  registry.py
src/histokit/pipelines/stages/: __init__.py  filter.py  grid.py  labels.py  tissue.py
src/histokit/segmentation/: __init__.py  detector.py  detectors.py  grandqc.py  registry.py  transforms.py
src/histokit/utils/: convert.py  filters.py
src/histokit/viz/: patchloc.py
tests/: conftest.py  test_cli.py  test_dataset.py  test_grandqc.py  test_io.py  test_patchset.py  test_pipeline.py  test_schema.py  test_utils.py
