[project]
name = "histokit"
version = "0.0.1"
description = "A histopathology toolkit for working with whole slide images and their annotations."
readme = "README.md"
authors = [{ name = "David Morrison", email = "dm236@st-andrews.ac.uk" }]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "openslide-bin>=4.0.0.13",
    "openslide-python>=1.4.3",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "tiffslide>=3.0.0",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = [
    "histopathology",
    "whole-slide-image",
    "digital-pathology",
    "patches",
    "preprocessing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.urls]
Homepage = "https://github.com/davemor/histokit"
Repository = "https://github.com/davemor/histokit"
Issues = "https://github.com/davemor/histokit/issues"

[project.scripts]
histokit = "histokit.cli.main:main"

[project.optional-dependencies]
grandqc = ["torch>=2.0", "segmentation-models-pytorch>=0.3"]

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.6"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
line-ending = "auto"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
